fix bottom_btns arrow & hide scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -29,8 +29,16 @@
 .thin-scrollbar::-webkit-scrollbar-thumb:hover {
   background-color: rgba(155, 155, 155, 0.9); /* Делаем ползунок чуть ярче при наведении */
 }
+/* hidden scrollbar */
+.hidden-scrollbar {
+  overflow: auto; /* или scroll */
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none;  /* IE и Edge */
+}
 
-
+.hidden-scrollbar::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera */
+}
 
 /* toast */
 .full-width-toast {
